Upcoming:
- Fixed cables in creative tab
- Added back support for the XNet api
- Fixed a potential crash in facades

1.15-2.1.13:
- Fixed a potential crash when placing a connector next to a hopper

1.15-2.1.12:
- Clipboard support in the controller is working again

1.15-2.1.11:
- Update to latest McJtyLib

1.15-2.1.10:
- Fixed a problem on servers

2.1.9:
- Safer client-side registrations (thread-safety)
- Various cleanups and fixes

2.1.8:
- Fixed a potential exploit which could be used to attack a server

2.1.7-beta:
- Update for latest McJtyLib

2.1.6-beta:
- Update for latest McJtyLib

2.1.5-beta:
- Kyle Edwards changed facade blocks to copy mimic block from other facade blocks
- Kyle Edwards fixed rendering of damaged cables

2.1.4-beta:
- Fixed the item model for XNet facades
- Kyle Edwards fixed various things related to the facades:
    - Fixed some rendering issues when breaking facades
    - Fixed the cable blocks being solid
    - Consolidate all cable/facade rendering into GenericCableBakedModel and remove the redundant FacadeBakedModel and everything related to it. This reduces the amount of code that has to be maintained.
    - Fix a possible performance regression in #414 that was pointed out on Discord. Now, the cable quads only get returned in the solid rendering layer, and quads for the mimicked block only get returned if the mimicked block's canRenderInLayer() is true.
    - Allow facade/cable rendering in all layers, ensuring that translucency works in addition to cutouts and solids.
    - Always render the cable even if there is also a facade, so that translucent and cutout blocks show the cable inside.

2.1.3-beta:
- Fixed some recipes so they work with any chest instead of only vanilla chests

2.1.2-beta:
- AKAStacks fixed a problem with breaking facades causing the network to unlink

2.1.1-beta:
- Dependency fix

2.1.0-beta:
- Fixed antenna models
- Re-implemented TOP support for all XNet cables/connectors and machines