@@ -1,6 +1,8 @@
 package mcjty.xnet.setup;
 
+import mcjty.lib.varia.DimensionId;
 import mcjty.xnet.multiblock.XNetWirelessChannels;
+import net.minecraft.world.dimension.DimensionType;
 import net.minecraftforge.event.TickEvent;
 import net.minecraftforge.eventbus.api.SubscribeEvent;
 import net.minecraftforge.fml.LogicalSide;
@@ -13,7 +15,7 @@ public class ForgeEventHandlers {
 
     @SubscribeEvent
     public void onWorldTick(TickEvent.WorldTickEvent event) {
-        if (event.side == LogicalSide.SERVER) {
+        if (event.phase == TickEvent.Phase.START && !event.world.isRemote && event.world.getDimension().getType() == DimensionType.OVERWORLD) {
             cnt--;
             if (cnt > 0) {
                 return;
